Funciones de activación y Entrenamientos (+ Cond)
Finalizado las funciones de activación, rutina de entrenamiento con
cond. de corte. Agregado al configuraciones varios parametros.

--- a/GTP1/Ej1/parametros.cfg
+++ b/GTP1/Ej1/parametros.cfg
@@ -2,3 +2,8 @@ cantidad_entradas = 2
 cantidad_salidas = 1
 archivo_entrada = ej1.csv
 tasa_aprendizaje = 0.2
+funcion_activacion = 1
+alfa_activacion = 0.5
+etapas_maximas = 100
+tolerancia_error = 1E-3
+
