--- a/GTP1/Ej1/parametros.cfg
+++ b/GTP1/Ej1/parametros.cfg
@@ -1,9 +1,15 @@
 cantidad_entradas = 2
 cantidad_salidas = 1
 archivo_entrada = ej1.csv
-tasa_aprendizaje = 0.02
+archivo_salida = ej1-salida.csv
+tasa_aprendizaje = 0.1
 funcion_activacion = 1
 alfa_activacion = 0.5
 etapas_maximas = 20
 tolerancia_error = 1E-3
+criterio_finalizacion = 1
+randomizar_datos = 1
+archivo_salida_randomizado = ej1random.csv
+cantidad_datos_extras = 10
+porcentaje_variacion = 0.05
 
