Nuevo nombre en las funciones. Agregado la generacion de Archivos con entradas variadas y salidas correspondientes. Entrenamiento y prueba con estos archivos variados. (Aprende muy rapido porque son 40 datos de entrenamiento?)(Tendrian que ser aleatorias las salidas deseadas del archivo de entrenamiento?)

--- a/GTP1/Ej1/parametros.cfg
+++ b/GTP1/Ej1/parametros.cfg
@@ -9,7 +9,8 @@ etapas_maximas = 20
 tolerancia_error = 1E-3
 criterio_finalizacion = 1
 randomizar_datos = 1
-archivo_salida_randomizado = ej1random.csv
+archivo_prueba_randomizado = ej1_prueba.csv
+archivo_entrenamiento_randomizado = ej1_entrenamiento.csv
 cantidad_datos_extras = 10
 porcentaje_variacion = 0.05
 
