Modificada la funciones generarArchivoAleatoriosEntrenamiento y generarArchivoAleatoriosPrueba para que sean mas genericas, ahora comiteo lo del ej 2

--- a/GTP1/Ej1/parametros.cfg
+++ b/GTP1/Ej1/parametros.cfg
@@ -1,6 +1,6 @@
 cantidad_entradas = 2
 cantidad_salidas = 1
-archivo_entrada = ej1-XOR.csv
+archivo_entrada = ej1-OR.csv
 archivo_salida = ej1-salida.csv
 tasa_aprendizaje = 0.1
 etapas_maximas = 20
