--- a/GTP1/Ej1/parametros.cfg
+++ b/GTP1/Ej1/parametros.cfg
@@ -5,7 +5,7 @@ archivo_salida = ej1-salida.csv
 tasa_aprendizaje = 0.1
 etapas_maximas = 20
 tolerancia_error = 1E-3
-randomizar_datos = 1
+#randomizar_datos = 1
 archivo_prueba_randomizado = ej1_prueba.csv
 archivo_entrenamiento_randomizado = ej1_entrenamiento.csv
 cantidad_datos_extras = 10
