--- a/GTP1/Ej2/parametros.cfg
+++ b/GTP1/Ej2/parametros.cfg
@@ -1,14 +1,11 @@
 cantidad_entradas = 3
 cantidad_salidas = 1
-archivo_entrada = tabla2.csv
+archivo_entrada = tabla2a.csv
 archivo_entrenamiento_randomizado = tabla2random.csv
 cantidad_datos_extras = 1000
 porcentaje_variacion = 0.1
 cantidad_particiones = 5
 porcentaje_entrenamiento = 0.8
-criterio_finalizacion = 1
 tasa_aprendizaje = 0.05
-funcion_activacion = 1
-alfa_activacion = 0.5
 epocas_maximas = 10000
 tolerancia_error = 1E-3
