--- a/GTP1/Ej2/parametros.cfg
+++ b/GTP1/Ej2/parametros.cfg
@@ -2,10 +2,10 @@ cantidad_entradas = 3
 cantidad_salidas = 1
 archivo_entrada = tabla2a.csv
 archivo_entrenamiento_randomizado = tabla2random.csv
-cantidad_datos_extras = 1000
+cantidad_datos = 1000
 porcentaje_variacion = 0.1
 cantidad_particiones = 5
 porcentaje_entrenamiento = 0.8
 tasa_aprendizaje = 0.05
-epocas_maximas = 10000
+epocas_maximas = 1000
 tolerancia_error = 1E-3
