continuacion de la limpieza. por alguna razon no puede leer correctamente el archivo generado con tabla2b

--- a/GTP1/Ej2/parametros.cfg
+++ b/GTP1/Ej2/parametros.cfg
@@ -1,6 +1,6 @@
 cantidad_entradas = 3
 cantidad_salidas = 1
-archivo_entrada = tabla2a.csv
+archivo_entrada = tabla2b.csv
 archivo_entrenamiento_randomizado = tabla2random.csv
 cantidad_datos = 1000
 porcentaje_variacion = 0.1
