Misc. El tema del OR y el XOR 3d es que funcionan bien, pero las leyendas salen en todas las vueltas del algoritmo de todas formas. Para el OR converge solo una epoca de la primera particion, por lo tantos los pesos no se modifican. Voy a probar dibujarlo para ver si es asi.

--- a/GTP1/Ej1/parametros.cfg
+++ b/GTP1/Ej1/parametros.cfg
@@ -4,7 +4,7 @@ archivo_entrada = ej1-OR.csv
 archivo_salida = ej1-salida.csv
 tasa_aprendizaje = 0.1
 etapas_maximas = 20
-tolerancia_error = 1E-3
+tolerancia_error = 0.05
 archivo_prueba_randomizado = ej1_prueba.csv
 archivo_entrenamiento_randomizado = ej1_entrenamiento.csv
 cantidad_datos_extras = 10
