--- a/GTP1/Ej2/parametros.cfg
+++ b/GTP1/Ej2/parametros.cfg
@@ -8,4 +8,4 @@ cantidad_particiones = 5
 porcentaje_entrenamiento = 0.8
 tasa_aprendizaje = 0.05
 epocas_maximas = 1000
-tolerancia_error = 1E-3
+tolerancia_error = 0.05
