Mejorado el output por consola, quedo mas leible. Hay que probar el programa con todas las variaciones posibles. (Verificar si se debe reiniciar el porcentaje_error en cada particion)

--- a/GTP1/Ej1/parametros.cfg
+++ b/GTP1/Ej1/parametros.cfg
@@ -2,9 +2,9 @@ cantidad_entradas = 2
 cantidad_salidas = 1
 archivo_entrada = ej1-OR.csv
 archivo_salida = ej1-salida.csv
-tasa_aprendizaje = 0.1
+tasa_aprendizaje = 0.01
 etapas_maximas = 20
-tolerancia_error = 0.05
+tolerancia_error = 1 # 1%
 archivo_prueba_randomizado = ej1_prueba.csv
 archivo_entrenamiento_randomizado = ej1_entrenamiento.csv
 cantidad_datos_extras = 10
