Mejorado el output por consola del Ej1

--- a/GTP1/Ej1/parametros.cfg
+++ b/GTP1/Ej1/parametros.cfg
@@ -4,7 +4,7 @@ archivo_entrada = ej1-OR.csv
 archivo_salida = ej1-salida.csv
 tasa_aprendizaje = 0.01
 etapas_maximas = 20
-tolerancia_error = 1 # 1%
+tolerancia_error = 10
 archivo_prueba_randomizado = ej1_prueba.csv
 archivo_entrenamiento_randomizado = ej1_entrenamiento.csv
 cantidad_datos_extras = 10
