Arreglado la generacion de aleatorios radial

--- a/GTP1/Ej2/parametros.cfg
+++ b/GTP1/Ej2/parametros.cfg
@@ -1,13 +1,13 @@
 cantidad_entradas = 3
 cantidad_salidas = 1
-archivo_entrada = tabla2b.csv
+archivo_entrada = tabla2a.csv
 archivo_entrenamiento_randomizado = tabla2random.csv
 cantidad_datos = 5000
-porcentaje_variacion = 0.1
+porcentaje_variacion = 0.7
 cantidad_particiones = 50
 porcentaje_entrenamiento = 0.8
 porcentaje_validacion = 0.1
 tasa_aprendizaje = 0.05
 epocas_maximas = 100
 # Tolerancia de error es en % ( 0 -> 100 )
-tolerancia_error = 0.8
+tolerancia_error = 1
