--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -1,6 +1,9 @@
 # Cantidad de datos de entradas a N neuronas
 cantidad_entradas = 4
+cantidad_salidas = 1
 capas = 5 3 2
+tasa_aprendizaje = 0.05
+momento = 0
 
 #archivo_entrada = tabla2b.csv
 #archivo_entrenamiento_randomizado = tabla2random.csv
@@ -9,7 +12,7 @@ capas = 5 3 2
 #cantidad_particiones = 50
 #porcentaje_entrenamiento = 0.8
 #porcentaje_validacion = 0.1
-tasa_aprendizaje = 0.05
+
 #epocas_maximas = 100
 # Tolerancia de error es en % ( 0 -> 100 )
 #tolerancia_error = 0.1
