--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -1,18 +1,15 @@
 # Cantidad de datos de entradas a N neuronas
-cantidad_entradas = 4
+cantidad_entradas = 2
 cantidad_salidas = 1
 capas = 5 3 2
 tasa_aprendizaje = 0.05
-momento = 0
+momento = 0.3
 
-#archivo_entrada = tabla2b.csv
-#archivo_entrenamiento_randomizado = tabla2random.csv
-#cantidad_datos = 5000
-#porcentaje_variacion = 0.85
-#cantidad_particiones = 50
-#porcentaje_entrenamiento = 0.8
-#porcentaje_validacion = 0.1
+archivo_entrada = concent.csv
+cantidad_particiones = 50
+porcentaje_entrenamiento = 0.8
+porcentaje_validacion = 0.1
 
-#epocas_maximas = 100
+epocas_maximas = 100
 # Tolerancia de error es en % ( 0 -> 100 )
-#tolerancia_error = 0.1
+tolerancia_error = 0.1
