Modificaciones para que permita la codificacion de las salidas.

--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -1,15 +1,22 @@
 # Cantidad de datos de entradas a N neuronas
 cantidad_entradas = 2
 cantidad_salidas = 1
+archivo_entrada = concent.csv
+
 capas = 5 3 2
 tasa_aprendizaje = 0.05
 momento = 0.3
 
-archivo_entrada = concent.csv
 cantidad_particiones = 50
 porcentaje_entrenamiento = 0.8
 porcentaje_validacion = 0.1
 
 epocas_maximas = 100
+
 # Tolerancia de error es en % ( 0 -> 100 )
 tolerancia_error = 0.1
+
+# Codificacion de las salidas
+# Formato: cada posicion es el numero de neurona ganadora.
+#          se sacará el valor la posicion de la neurona ganadora como salida
+codificacion_salida = 0 1
