--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -5,17 +5,18 @@ archivo_entrada = concent.csv
 
 capas = 4 3 2
 tasa_aprendizaje = 0.1
-momento = 0.2
+momento = 0.1
 
-cantidad_particiones = 5
+cantidad_particiones = 50
+
+#Validacion Cruzada k=0 usa los porcentajes
 porcentaje_entrenamiento = 0.8
 porcentaje_validacion = 0.1
-
-epocas_maximas = 100
+k = 0
+epocas_maximas = 10
 
 # Tolerancia de error es en % ( 0 -> 100 )
-tolerancia_error = 0.235
-
+tolerancia_error = 1
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
