--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -1,14 +1,14 @@
 # Cantidad de datos de entradas a N neuronas
 cantidad_entradas = 2
 cantidad_salidas = 1
-archivo_entrada = concent.csv
+archivo_entrada = XOR-etra.csv
 
-capas = 4 3 2
-tasa_aprendizaje = 0.1
+capas = 2 1
+tasa_aprendizaje = 0.2
 momento = 0.1
 
 
-cantidad_particiones = 10
+cantidad_particiones = 2
 
 #Validacion Cruzada k=0 usa los porcentajes
 porcentaje_entrenamiento = 0.8
@@ -22,4 +22,4 @@ tolerancia_error = 1
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 0 1
+codificacion_salida = 1
