--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -1,20 +1,20 @@
 # Cantidad de datos de entradas a N neuronas
 cantidad_entradas = 2
 cantidad_salidas = 1
-archivo_entrada = XOR-etra.csv
+archivo_entrada = concent.csv
 
-capas = 2 1
-tasa_aprendizaje = 0.2
+capas = 4 3 2
+tasa_aprendizaje = 0.1
 momento = 0.1
 
 
-cantidad_particiones = 2
+cantidad_particiones = 5
 
 #Validacion Cruzada k=0 usa los porcentajes
 porcentaje_entrenamiento = 0.8
 porcentaje_validacion = 0.1
 k = 0
-epocas_maximas = 100
+epocas_maximas = 10
 
 # Tolerancia de error es en % ( 0 -> 100 )
 tolerancia_error = 1
@@ -22,4 +22,4 @@ tolerancia_error = 1
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 1
+codificacion_salida = 0 1
