--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -1,12 +1,11 @@
 # Cantidad de datos de entradas a N neuronas
 cantidad_entradas = 2
 cantidad_salidas = 1
-archivo_entrada = concent.csv
+archivo_entrada = XOR-extra.csv
 
-capas = 4 3 2
-tasa_aprendizaje = 0.1
-momento = 0.1
-
+capas = 2 1
+tasa_aprendizaje = 0.05
+momento = 0.025
 
 cantidad_particiones = 5
 
@@ -14,12 +13,12 @@ cantidad_particiones = 5
 porcentaje_entrenamiento = 0.8
 porcentaje_validacion = 0.1
 k = 0
-epocas_maximas = 10
+epocas_maximas = 30
 
 # Tolerancia de error es en % ( 0 -> 100 )
-tolerancia_error = 1
+tolerancia_error = 1.5
 
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 0 1
+codificacion_salida = 1
