--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -1,24 +1,24 @@
 # Cantidad de datos de entradas a N neuronas
 cantidad_entradas = 2
 cantidad_salidas = 1
-archivo_entrada = XOR-extra.csv
+archivo_entrada = concent.csv
 
-capas = 2 1
+capas = 10 20 2
 tasa_aprendizaje = 0.05
-momento = 0.025
+momento = 0.0
 
-cantidad_particiones = 5
+cantidad_particiones = 1
 
 #Validacion Cruzada k=0 usa los porcentajes
 porcentaje_entrenamiento = 0.8
 porcentaje_validacion = 0.1
 k = 0
-epocas_maximas = 30
+epocas_maximas = 300
 
 # Tolerancia de error es en % ( 0 -> 100 )
-tolerancia_error = 1.5
+tolerancia_error = 0.1
 
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 1
+codificacion_salida = 0 1
