Arreglado todo para iris

--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -1,13 +1,13 @@
 # Cantidad de datos de entradas a N neuronas
-cantidad_entradas = 2
+cantidad_entradas = 4
 cantidad_salidas = 1
-archivo_entrada = concent.csv
+archivo_entrada = iris.csv
 
-capas = 10 20 2
+capas = 5 3 3
 tasa_aprendizaje = 0.05
 momento = 0.0
 
-cantidad_particiones = 1
+cantidad_particiones = 2
 
 #Validacion Cruzada k=0 usa los porcentajes
 porcentaje_entrenamiento = 0.8
@@ -21,4 +21,4 @@ tolerancia_error = 0.1
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 0 1
+codificacion_salida = 0 1 2
