Agregado el parametro cant_clases para la red radial

--- a/GTP2/Ej1/parametros.cfg
+++ b/GTP2/Ej1/parametros.cfg
@@ -22,3 +22,6 @@ tolerancia_error = 0.1
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
 codificacion_salida = 0 1
+
+#cantidad de clases radiales
+cant_clases = 5
