Arreglos de problemas

--- a/GTP2/Ej1/parametros.cfg
+++ b/GTP2/Ej1/parametros.cfg
@@ -1,7 +1,7 @@
 # Cantidad de datos de entradas a N neuronas
 cantidad_entradas = 4
 cantidad_salidas = 1
-archivo_entrada = iris.csv
+archivo_entrada = xor-extra.csv
 
 capas = 8 10 3
 tasa_aprendizaje = 0.05
