--- a/GTP2/Ej1/parametros.cfg
+++ b/GTP2/Ej1/parametros.cfg
@@ -1,13 +1,13 @@
 # Cantidad de datos de entradas a N neuronas
-cantidad_entradas = 4
+cantidad_entradas = 2
 cantidad_salidas = 1
 archivo_entrada = xor-extra.csv
 
-capas = 8 10 3
+capas = 2 2
 tasa_aprendizaje = 0.05
 momento = 0.025
 
-cantidad_particiones = 30
+cantidad_particiones = 1
 
 #Validacion Cruzada k=0 usa los porcentajes
 porcentaje_entrenamiento = 0.8
@@ -21,4 +21,4 @@ tolerancia_error = 0.1
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 0 1 2
+codificacion_salida = 0 1
