arreglados algunos problemas

--- a/GTP2/Ej1/parametros.cfg
+++ b/GTP2/Ej1/parametros.cfg
@@ -1,7 +1,7 @@
 # Cantidad de datos de entradas a N neuronas
 cantidad_entradas = 2
 cantidad_salidas = 1
-archivo_entrada = xor-extra.csv
+archivo_entrada = XOR-extra.csv
 
 capas = 2 2
 tasa_aprendizaje = 0.05
