fin del som ej 2

--- a/GTP2/Ej2/parametros.cfg
+++ b/GTP2/Ej2/parametros.cfg
@@ -1,6 +1,27 @@
 # Dimension de los datos de entrada
-cantidad_entradas = 2
+tamano_entradas = 2
 
 # SOM
 som_tam_x = 2
 som_tam_y = 2
+
+# Tasa de aprendizaje:
+#  Valor 0 = Tasa de inicio para ordenamiento topologico
+#  Valor 1->2 = Tasas de aproximacion lineal para etapa de transiciòn
+#  Valor 2->3 = Tasas de aproximacion lineal para ajuste fino
+tasa_aprendizaje = 0.9 0.4 0.2 0.001
+
+# Radio de vecindad al inicio de las etapas
+radio_vecindad = 10
+
+# Cantidad de epocas por cada etapa
+# Valor 0 = ordenamiento topologico
+# Valor 1 = etapa de transicion
+# Valor 2 = Ajuste fino
+etapas = 1000 1000 3000
+
+
+# Archivo de entrada
+archivo_entrada = cuadrado.csv
+#archivo_entrada = circulo.csv
+#archivo_entrada = t.csv
