Con suerte estaria listo el som

--- a/GTP2/Ej3/parametros.cfg
+++ b/GTP2/Ej3/parametros.cfg
@@ -1,5 +1,6 @@
 # Dimension de los datos de entrada
 tamano_entradas = 2
+tamano_salidas = 1
 
 # SOM
 som_tam_x = 2
@@ -18,10 +19,12 @@ radio_vecindad = 10
 # Valor 0 = ordenamiento topologico
 # Valor 1 = etapa de transicion
 # Valor 2 = Ajuste fino
-etapas = 1000 1000 3000
+epocas = 1000 1000 3000
 
+# Codificacion de las salidas
+cant_clases = 2
 
 # Archivo de entrada
-archivo_entrada = cuadrado.csv
-#archivo_entrada = circulo.csv
-#archivo_entrada = t.csv
+archivo_entrada = clouds.csv
+#archivo_entrada = phoneme.csv
+
