--- a/GTP2/Ej2/parametros.cfg
+++ b/GTP2/Ej2/parametros.cfg
@@ -18,7 +18,7 @@ radio_vecindad = 10
 # Valor 0 = ordenamiento topologico
 # Valor 1 = etapa de transicion
 # Valor 2 = Ajuste fino
-etapas = 1000 1000 3000
+epocas = 1000 1000 3000
 
 
 # Archivo de entrada
