--- a/GTP2/Ej1/parametros.cfg
+++ b/GTP2/Ej1/parametros.cfg
@@ -1,7 +1,7 @@
 # Cantidad de datos de entradas a N neuronas
-cantidad_entradas = 2
+cantidad_entradas = 4
 cantidad_salidas = 1
-archivo_entrada = XOR-extra.csv
+archivo_entrada = iris.csv
 
 tasa_aprendizaje = 0.05
 momento = 0.025
@@ -20,7 +20,7 @@ tolerancia_error = 0.1
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 0 1
+codificacion_salida = 0 1 3
 
 #cantidad de clases radiales
 cant_clases = 4
