--- a/GTP2/Ej1/parametros.cfg
+++ b/GTP2/Ej1/parametros.cfg
@@ -1,10 +1,9 @@
 # Cantidad de datos de entradas a N neuronas
-cantidad_entradas = 4
+cantidad_entradas = 2
 cantidad_salidas = 1
-archivo_entrada = iris.csv
+archivo_entrada = XOR-extra.csv
 
-tasa_aprendizaje = 0.05
-momento = 0.025
+tasa_aprendizaje = 0.1
 
 cantidad_particiones = 1
 
@@ -12,15 +11,15 @@ cantidad_particiones = 1
 porcentaje_entrenamiento = 0.8
 porcentaje_validacion = 0.1
 k = 0
-epocas_maximas = 300
+epocas_maximas = 10000
 
 # Tolerancia de error es en % ( 0 -> 100 )
-tolerancia_error = 0.1
+tolerancia_error = 1
 
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
-#          se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 0 1 3
+# se sacará el valor la posicion de la neurona ganadora como salida
+codificacion_salida = 0 1
 
 #cantidad de clases radiales
 cant_clases = 4
