Agregados graficos para phoneme

--- a/GTP2/Ej3/parametros.cfg
+++ b/GTP2/Ej3/parametros.cfg
@@ -1,5 +1,5 @@
 # Dimension de los datos de entrada
-tamano_entradas = 2
+tamano_entradas = 5
 tamano_salidas = 1
 
 # SOM
@@ -25,6 +25,6 @@ epocas = 1000 1000 3000
 cant_clases = 2
 
 # Archivo de entrada
-archivo_entrada = clouds.csv
-#archivo_entrada = phoneme.csv
+#archivo_entrada = clouds.csv
+archivo_entrada = phoneme.csv
 
