--- a/GTP2/Ej2/parametros.cfg
+++ b/GTP2/Ej2/parametros.cfg
@@ -2,23 +2,24 @@
 tamano_entradas = 2
 
 # SOM
-som_tam_x = 2
-som_tam_y = 2
+som_tam_x = 10
+som_tam_y = 10
 
 # Tasa de aprendizaje:
 #  Valor 0 = Tasa de inicio para ordenamiento topologico
 #  Valor 1->2 = Tasas de aproximacion lineal para etapa de transiciòn
 #  Valor 2->3 = Tasas de aproximacion lineal para ajuste fino
-tasa_aprendizaje = 0.2 0.1 0.01 0.001
+tasa_aprendizaje = 0.8 0.35 0.01 0.001
 
 # Radio de vecindad al inicio de las etapas
-radio_vecindad = 1
+radio_vecindad = 4
+limite_vecindad = 0.15
 
 # Cantidad de epocas por cada etapa
 # Valor 0 = ordenamiento topologico
 # Valor 1 = etapa de transicion
 # Valor 2 = Ajuste fino
-epocas = 70 10 30
+epocas = 1 1 3
 
 
 # Archivo de entrada
