Arreglado problema con la media

--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -3,16 +3,16 @@ cantidad_entradas = 4
 cantidad_salidas = 1
 archivo_entrada = iris.csv
 
-capas = 10 8 3
-tasa_aprendizaje = 0.1
-momento = 0.1
+capas = 3 3
+tasa_aprendizaje = 0.05
+momento = 0.0
 
-cantidad_particiones = 5
+cantidad_particiones = 10
 
 #Validacion Cruzada k=0 usa los porcentajes
 porcentaje_entrenamiento = 0.8
 porcentaje_validacion = 0.1
-k = 1
+k = 0
 epocas_maximas = 300
 
 # Tolerancia de error es en % ( 0 -> 100 )
