--- a/GTP2/Ej1/parametros.cfg
+++ b/GTP2/Ej1/parametros.cfg
@@ -1,11 +1,11 @@
 # Cantidad de datos de entradas a N neuronas
-cantidad_entradas = 2
+cantidad_entradas = 4
 cantidad_salidas = 1
-archivo_entrada = XOR-extra.csv
+archivo_entrada = iris.csv
 
 tasa_aprendizaje = 0.05
 
-cantidad_particiones = 1
+cantidad_particiones = 10
 
 #Validacion Cruzada k=0 usa los porcentajes
 porcentaje_entrenamiento = 0.8
@@ -19,7 +19,8 @@ tolerancia_error = 1
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 # se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 0 1
+# Si existe un solo elemento se utilizará un graficador separando por el valor de la salida directametne
+codificacion_salida = 0 1 2
 
 #cantidad de clases radiales
-cant_clases = 4
+cant_clases = 3
