--- a/GTP2/Ej2/parametros.cfg
+++ b/GTP2/Ej2/parametros.cfg
@@ -19,10 +19,10 @@ limite_vecindad = 0.15
 # Valor 0 = ordenamiento topologico
 # Valor 1 = etapa de transicion
 # Valor 2 = Ajuste fino
-epocas = 7 50 100
+epocas = 30 50 100
 
 
 # Archivo de entrada
 #archivo_entrada = cuadrado.csv
-archivo_entrada = circulo.csv
-#archivo_entrada = t.csv
+#archivo_entrada = circulo.csv
+archivo_entrada = t.csv
