--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -13,5 +13,8 @@ k4 =
 #estado inicial puerta
 e_puerta = 0
 #intervalo actualizacion
-t_act =
-
+t_act = 10
+#capacitancia termica habitacion
+c_ter = 15,105
+#probabilidad apertura puerta
+pa_puerta = 1/360
