--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -18,3 +18,6 @@ t_act = 10
 c_ter = 15,105
 #probabilidad apertura puerta
 pa_puerta = 1/360
+
+# Cantidad de segundos a simular
+cant_segundos = 3000
