Mejorado el parametro. Mejorado metodo de temperatura exterior.

--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -1,7 +1,7 @@
 #temperatura en el exterior
-temp_ext =
+temp_ext = 19.0
 #temperatura inicial en el interior
-temp_ini_int =
+temp_ini_int = 25.0
 #constante de conductividad termica paredes
 k1 = 0.1456
 #calor resistencia
