--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -1,5 +1,16 @@
-#temperatura en el exterior
+###########################
+# TEMPERATURA EXTERIOR
+# Temperatura en el exterior inicial
 temp_ext = 19.0
+# Temperatura Maxima de salto
+temp_ext_max = 23.0
+# Temperatura Minima de salto
+temp_ext_min = 19.0
+# Cantida de segundos entre saltos
+temp_ext_cambio = 400
+
+###########################
+# TEMPERATURA INTERIOR
 #temperatura inicial en el interior
 temp_ini_int = 25.0
 #constante de conductividad termica paredes
@@ -18,5 +29,7 @@ t_act = 10
 c_ter = 15,105
 #probabilidad apertura puerta
 pa_puerta = 1/360
+
+###########################
 # Cantidad de segundos a simular
 cant_segundos = 3000
