Mejorados parametros y sacados parametros inutiles

--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -13,23 +13,16 @@ temp_ext_cambio = 400
 # TEMPERATURA INTERIOR
 #temperatura inicial en el interior
 temp_ini_int = 25.0
-#constante de conductividad termica paredes
-k1 = 0.1456
-#calor resistencia
-k2 = 1
-#calor refrigerador (disminuye temperatura)
-k3 = -0.02
-#calor entrante por la puerta
-k4 =
+
+###########################
 #estado inicial puerta
 e_puerta = 0
-#intervalo actualizacion
-t_act = 10
-#capacitancia termica habitacion
-c_ter = 15,105
-#probabilidad apertura puerta
-pa_puerta = 1/360
+# probabilidad apertura puerta
+# 1/360 = 0,00277777777778
+pa_puerta = 0,00277
 
 ###########################
 # Cantidad de segundos a simular
 cant_segundos = 3000
+#intervalo actualizacion en segundo
+t_act = 10
