Arreglado problema con la logica de calculo de la apertura de la puerta

--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -19,7 +19,8 @@ temp_ini_int = 25.0
 e_puerta = 0
 # probabilidad apertura puerta
 # 1/360 = 0,00277777777778
-pa_puerta = 0,00277
+# solo colocamos el denominador
+pa_puerta = 360
 
 ###########################
 # Cantidad de segundos a simular
