--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -28,4 +28,11 @@ cant_segundos = 3000
 #intervalo actualizacion en segundo
 t_act = 10
 
-valores = 0.0 1.0 1.0 2.0
+[Entradas]
+alta = 0.1 0.4 0.5 0.3
+
+[Salidas]
+voltaje/bajo = 0.5 0.6 0.7 0.8
+
+intensidad/bajo = 0.2 0.4 0.5 0.3
+
