Agregada carga de los conjuntos y mejorada la documentacion

--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -29,6 +29,11 @@ cant_segundos = 3000
 t_act = 10
 
 [Entradas]
+# Reglas para los conjuntos trapezoidales en cada nombre
+# nombre de la clave = nombre del grupo
+# Los valores seran convertidos a cada uno de los 4 puntos del trapezoide
+# sean alta = x1 x2 x3 x4
+# se convertira en (x1,0) (x2,1) (x3,1) (x4,0)
 alta = 0.1 0.4 0.5 0.3
 media = 0.2 0.4 0.5 0.6
 
@@ -37,3 +42,12 @@ voltaje/bajo = 0.5 0.6 0.7 0.8
 
 intensidad/bajo = 0.2 0.4 0.5 0.3
 
+[Reglas]
+# Las reglas indican en cada caso que conjunto de salida se debe accionar
+# cuando ese activo el conjunto de entrada que esté especificado en la clave
+# o sea, si se activa el conjunto de entrada 1, se evaluaran los conjuntos 0 1 2 y 3 de salida para voltaje
+voltaje/1 = 0 1 2 3
+voltaje/2 = 0 1 2 3
+
+intensidad/1 = 0 1 2 3
+intensidad/2 = 0 1 2 3
