Mejorados grupos de entrada y agregado mensaje que arregla el problema de conjuntos

--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -12,11 +12,11 @@ temp_ext_cambio = 400
 ###########################
 # TEMPERATURA DESEADA
 # Temperatura maxima de salto
-temp_deseada_max = 22
+temp_deseada_max = 22.0
 # Temperatura Minima de Salto
-temp_deseada_min = 20
+temp_deseada_min = 20.0
 # Cantidad de segundos entre saltos
-temp_ext_cambio = 400
+temp_deseada_cambio = 400
 
 ###########################
 # TEMPERATURA INTERIOR
@@ -43,8 +43,12 @@ t_act = 10
 # sean alta = x1 x2 x3 x4
 # se convertira en (x1,0) (x2,1) (x3,1) (x4,0)
 [Entradas]
-alta = 0.1 0.4 0.5 0.3
-media = 0.2 0.4 0.5 0.6
+Muy Frio = -5.0 -4.8 -3.5 -3.0
+Frio = -3.5 -2.8 -1.5 -0.9
+Normal = -1.0 -0.8 0.8 1.0
+Caliente = 0.9 1.5 2.8 3.5
+Muy Caliente = 2.5 3.0 4.5 5.0
+# Se refiere a diferencias de temperatura
 
 [Salidas]
 voltaje/bajo = 0.5 0.6 0.7 0.8
@@ -56,5 +60,13 @@ intensidad/bajo = 0.2 0.4 0.5 0.3
 # o sea, si se activa el conjunto de entrada 1, se evaluaran los conjuntos 0 1 2 y 3 de salida para voltaje
 [Reglas]
 voltaje/0 = 0
+voltaje/1 = 0
+voltaje/2 = 0
+voltaje/3 = 0
+voltaje/4 = 0
 
 intensidad/0 = 0
+intensidad/1 = 0
+intensidad/2 = 0
+intensidad/3 = 0
+intensidad/4 = 0
