--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -16,7 +16,7 @@ temp_deseada_max = 22.0
 # Temperatura Minima de Salto
 temp_deseada_min = 20.0
 # Cantidad de segundos entre saltos
-temp_deseada_cambio = 400
+temp_deseada_cambio = 6000
 
 ###########################
 # TEMPERATURA INTERIOR
@@ -29,7 +29,7 @@ e_puerta = 0
 # probabilidad apertura puerta
 # 1/360 = 0,00277777777778
 # solo colocamos el denominador
-pa_puerta = 360
+pa_puerta = 0,00277777777778
 
 ###########################
 # Cantidad de segundos a simular
@@ -43,30 +43,36 @@ t_act = 10
 # sean alta = x1 x2 x3 x4
 # se convertira en (x1,0) (x2,1) (x3,1) (x4,0)
 [Entradas]
-Muy Frio = -5.0 -4.8 -3.5 -3.0
-Frio = -3.5 -2.8 -1.5 -0.9
-Normal = -1.0 -0.8 0.8 1.0
-Caliente = 0.9 1.5 2.8 3.5
-Muy Caliente = 2.5 3.0 4.5 5.0
+0_Muy_Frio = -20.0 -20.0 -6.0 -4.0
+1_Frio = -6.0 -4.0 -1.0 0.0
+2_Normal = -1.0 0.0 0.0 1.0
+3_Caliente = 0.0 1.0 4.0 6.0
+4_Muy_Caliente = 4.0 6.0 20.0 20.0
 # Se refiere a diferencias de temperatura
 
 [Salidas]
-voltaje/bajo = 0.5 0.6 0.7 0.8
+voltaje/muy_bajo = 0.0 0.0 10.0 80.0
+voltaje/bajo = 10.0 80.0 140.0 180.0
+voltaje/alto = 140.0 180.0 230.0 300.0
+voltaje/muy_alto = 230.0 300.0 360.0 360.0
 
-intensidad/bajo = 0.2 0.4 0.5 0.3
+intensidad/muy_bajo = 0.0 0.0 0.0 0.5
+intensidad/bajo = 0.12 0.5 1.0 1.5
+intensidad/fuerte = 1.0 1.5 2.0 2.5
+intensidad/muy_fuerte = 2.0 2.5 3.0 3.5
 
 # Las reglas indican en cada caso que conjunto de salida se debe accionar
 # cuando ese activo el conjunto de entrada que esté especificado en la clave
 # o sea, si se activa el conjunto de entrada 1, se evaluaran los conjuntos 0 1 2 y 3 de salida para voltaje
 [Reglas]
-voltaje/0 = 0
-voltaje/1 = 0
-voltaje/2 = 0
-voltaje/3 = 0
-voltaje/4 = 0
+#voltaje/0 =
+#voltaje/1 =
+#voltaje/2 = 0
+voltaje/3 = 0 1 2
+voltaje/4 = 1 2 3
 
-intensidad/0 = 0
-intensidad/1 = 0
-intensidad/2 = 0
-intensidad/3 = 0
-intensidad/4 = 0
+intensidad/0 = 2 3
+intensidad/1 = 1 2 3
+#intensidad/2 = 0 1 2
+#intensidad/3 = 0
+#intensidad/4 = 0
