Se abre y se cierra la puerta cada tantos segundos que se seteen en los parametros.cfg

--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -29,11 +29,11 @@ e_puerta = 0
 # probabilidad apertura puerta
 # 1/360 = 0,00277777777778
 # solo colocamos el denominador
-pa_puerta = 0,00277777777778
+pa_puerta = 360
 
 ###########################
 # Cantidad de segundos a simular
-cant_segundos = 3000
+cant_segundos = 3600
 #intervalo actualizacion en segundo
 t_act = 10
 
@@ -52,14 +52,25 @@ t_act = 10
 
 [Salidas]
 voltaje/muy_bajo = 0.0 0.0 10.0 80.0
-voltaje/bajo = 10.0 80.0 140.0 180.0
-voltaje/alto = 140.0 180.0 230.0 300.0
-voltaje/muy_alto = 230.0 300.0 360.0 360.0
+voltaje/bajo = 10.0 80.0 100.0 120.0
+voltaje/alto = 100.0 120.0 140.0 160.0
+voltaje/muy_alto = 140.0 160.0 220.0 220.0
+
+#voltaje/muy_bajo = -1.0 -0.8 -0.6 -0.4
+#voltaje/bajo = -0.6 -0.4 -0.2 0.0
+#voltaje/alto = -0.2 0.0 0.2 0.4
+#voltaje/muy_alto = 0.2 0.4 0.8 1.0
+
 
 intensidad/muy_bajo = 0.0 0.0 0.0 0.5
 intensidad/bajo = 0.12 0.5 1.0 1.5
 intensidad/fuerte = 1.0 1.5 2.0 2.5
 intensidad/muy_fuerte = 2.0 2.5 3.0 3.5
+
+#intensidad/muy_bajo = -1.0 -0.8 -0.6 -0.4
+#intensidad/bajo = -0.6 -0.4 -0.2 0.0
+#intensidad/fuerte = -0.2 0.0 0.2 0.4
+#intensidad/muy_fuerte = 0.2 0.4 0.8 1.0
 
 # Las reglas indican en cada caso que conjunto de salida se debe accionar
 # cuando ese activo el conjunto de entrada que esté especificado en la clave
