Creo que ahora esta bien. Faltaria twekear los parametros

--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -1,13 +1,13 @@
 ###########################
 # TEMPERATURA EXTERIOR
 # Temperatura en el exterior inicial
-temp_ext = 19.0
+temp_ext = 25.0
 # Temperatura Maxima de salto
 temp_ext_max = 23.0
 # Temperatura Minima de salto
 temp_ext_min = 19.0
 # Cantida de segundos entre saltos
-temp_ext_cambio = 400
+temp_ext_cambio = 600
 
 ###########################
 # TEMPERATURA DESEADA
@@ -16,7 +16,7 @@ temp_deseada_max = 22.0
 # Temperatura Minima de Salto
 temp_deseada_min = 20.0
 # Cantidad de segundos entre saltos
-temp_deseada_cambio = 6000
+temp_deseada_cambio = 600
 
 ###########################
 # TEMPERATURA INTERIOR
@@ -48,18 +48,19 @@ t_act = 10
 2_Normal = -1.0 0.0 0.0 1.0
 3_Caliente = 0.0 1.0 4.0 6.0
 4_Muy_Caliente = 4.0 6.0 20.0 20.0
+
 # Se refiere a diferencias de temperatura
 
 [Salidas]
-voltaje/muy_bajo = 0.0 0.0 10.0 80.0
-voltaje/bajo = 10.0 80.0 100.0 120.0
-voltaje/alto = 100.0 120.0 140.0 160.0
-voltaje/muy_alto = 140.0 160.0 220.0 220.0
+voltaje/muy_bajo = 0.0 27.5 55.0 82.5
+voltaje/bajo = 55.0 82.5 110.0 137.5
+voltaje/alto = 110.0 137.5 165.0 192.5
+voltaje/muy_alto = 165.0 192.5 192.5 220.0
 
-intensidad/muy_bajo = 0.0 0.0 0.01 0.05
-intensidad/bajo = 0.01 0.05 0.07 0.1
-intensidad/fuerte = 0.07 0.1 0.13 0.17
-intensidad/muy_fuerte = 0.17 0.23 0.26 0.26
+intensidad/muy_bajo = 0.0 0.03 0.03 0.06
+intensidad/bajo = 0.03 0.06 0.09 0.12
+intensidad/fuerte = 0.09 0.12 0.15 0.18
+intensidad/muy_fuerte = 0.15 0.18 0.21 0.24
 
 #intensidad/muy_bajo = 0.0 0.0 0.0 0.5
 #intensidad/bajo = 0.12 0.5 1.0 1.5
@@ -70,14 +71,9 @@ intensidad/muy_fuerte = 0.17 0.23 0.26 0.26
 # cuando ese activo el conjunto de entrada que esté especificado en la clave
 # o sea, si se activa el conjunto de entrada 1, se evaluaran los conjuntos 0 1 2 y 3 de salida para voltaje
 [Reglas]
-#voltaje/0 =
-#voltaje/1 =
-#voltaje/2 = 0
-voltaje/3 = 0 1 2
-voltaje/4 = 1 2 3
 
 intensidad/0 = 2 3
-intensidad/1 = 1 2 3
-#intensidad/2 = 0 1 2
-#intensidad/3 = 0
-#intensidad/4 = 0
+intensidad/1 = 0 1
+voltaje/3 = 0 1
+voltaje/4 = 2 3
+
