--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -7,7 +7,7 @@ temp_ext_max = 23.0
 # Temperatura Minima de salto
 temp_ext_min = 19.0
 # Cantida de segundos entre saltos
-temp_ext_cambio = 3600
+temp_ext_cambio = 11200
 
 ###########################
 # TEMPERATURA DESEADA
@@ -16,7 +16,7 @@ temp_deseada_max = 22.0
 # Temperatura Minima de Salto
 temp_deseada_min = 20.0
 # Cantidad de segundos entre saltos
-temp_deseada_cambio = 3600
+temp_deseada_cambio = 600
 
 ###########################
 # TEMPERATURA INTERIOR
@@ -29,7 +29,7 @@ e_puerta = 0
 # probabilidad apertura puerta
 # 1/360 = 0,00277777777778
 # solo colocamos el denominador
-pa_puerta = 3600
+pa_puerta = 360
 
 ###########################
 # Cantidad de segundos a simular
@@ -43,11 +43,11 @@ t_act = 10
 # sean alta = x1 x2 x3 x4
 # se convertira en (x1,0) (x2,1) (x3,1) (x4,0)
 [Entradas]
-0_Muy_Frio = -10.0 -10.0 -6.0 -4.0
+0_Muy_Frio = -8.0 -8.0 -6.0 -4.0
 1_Frio = -6.0 -4.0 -1.0 0.0
 2_Normal = -1.0 0.0 0.0 1.0
 3_Caliente = 0.0 1.0 4.0 6.0
-4_Muy_Caliente = 4.0 6.0 10.0 10.0
+4_Muy_Caliente = 4.0 6.0 8.0 8.0
 
 # Se refiere a diferencias de temperatura
 
@@ -68,7 +68,9 @@ intensidad/muy_fuerte = 0.26 0.3 0.34 0.38
 [Reglas]
 
 intensidad/0 = 2 3
-intensidad/1 = 0 1
-voltaje/3 = 0 1
+intensidad/1 = 1 2
+#intensidad/2 = 0
+#voltaje/2 = 0
+voltaje/3 = 1 2
 voltaje/4 = 2 3
 
