--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -43,11 +43,11 @@ t_act = 10
 # sean alta = x1 x2 x3 x4
 # se convertira en (x1,0) (x2,1) (x3,1) (x4,0)
 [Entradas]
-0_Muy_Frio = -8.0 -8.0 -6.0 -4.0
-1_Frio = -6.0 -4.0 -1.0 0.0
+0_Muy_Frio = -8.0 -8.0 -6.0 -3.0
+1_Frio = -6.0 -3.0 -1.0 0.0
 2_Normal = -1.0 0.0 0.0 1.0
-3_Caliente = 0.0 1.0 4.0 6.0
-4_Muy_Caliente = 4.0 6.0 8.0 8.0
+3_Caliente = 0.0 1.0 3.0 6.0
+4_Muy_Caliente = 3.0 6.0 8.0 8.0
 
 # Se refiere a diferencias de temperatura
 
@@ -56,6 +56,11 @@ voltaje/muy_bajo = 0.0 27.5 55.0 82.5
 voltaje/bajo = 55.0 82.5 110.0 137.5
 voltaje/alto = 110.0 137.5 165.0 192.5
 voltaje/muy_alto = 165.0 192.5 192.5 220.0
+
+#intensidad/muy_bajo = 0.0 0.04 0.1 0.14
+#intensidad/bajo = 0.1 0.14 0.18 0.22
+#intensidad/fuerte = 0.18 0.22 0.26 0.3
+#intensidad/muy_fuerte = 0.26 0.3 0.34 0.38
 
 intensidad/muy_bajo = 0.0 0.04 0.1 0.14
 intensidad/bajo = 0.1 0.14 0.18 0.22
@@ -68,9 +73,9 @@ intensidad/muy_fuerte = 0.26 0.3 0.34 0.38
 [Reglas]
 
 intensidad/0 = 2 3
-intensidad/1 = 1 2
+intensidad/1 = 0 1
 #intensidad/2 = 0
 #voltaje/2 = 0
-voltaje/3 = 1 2
+voltaje/3 = 0 1
 voltaje/4 = 2 3
 
