Correcciones de la ultima clase

--- a/GTP3/parametros.cfg
+++ b/GTP3/parametros.cfg
@@ -3,9 +3,9 @@
 # Temperatura en el exterior inicial
 temp_ext = 25.0
 # Temperatura Maxima de salto
-temp_ext_max = 23.0
+temp_ext_max = 25.0
 # Temperatura Minima de salto
-temp_ext_min = 19.0
+temp_ext_min = 16.0
 # Cantida de segundos entre saltos
 temp_ext_cambio = 1200
 
@@ -43,29 +43,27 @@ t_act = 10
 # sean alta = x1 x2 x3 x4
 # se convertira en (x1,0) (x2,1) (x3,1) (x4,0)
 [Entradas]
-0_Muy_Frio = -8.0 -8.0 -6.0 -3.0
-1_Frio = -6.0 -3.0 -1.0 0.0
-2_Normal = -1.0 0.0 0.0 1.0
-3_Caliente = 0.0 1.0 3.0 6.0
-4_Muy_Caliente = 3.0 6.0 8.0 8.0
+0_Muy_Frio = -8.0 -8.0 -6.0 -5.0
+1_Frio = -6.0 -5.0 -2.5 -2.0
+2_Frio_Normal = -2.5 -2.0 -1.0 -0.5
+3_Caliente_Normal = 0.5 1.0 2.0 2.5
+4_Caliente = 2.0 2.5 5.0 6.0
+5_Muy_Caliente = 5.0 6.0 8.0 8.0
 
 # Se refiere a diferencias de temperatura
 
 [Salidas]
-voltaje/muy_bajo = 0.0 27.5 55.0 82.5
-voltaje/bajo = 55.0 82.5 110.0 137.5
-voltaje/alto = 110.0 137.5 165.0 192.5
-voltaje/muy_alto = 165.0 192.5 192.5 220.0
+voltaje/0_muy_bajo = 0.0 15.0 20.0 25.0
+voltaje/1_bajo = 20.0 25.0 75.0 85.0
+voltaje/2_alto = 75.0 85.0 130.0 140.0
+voltaje/3_muy_alto = 130.0 140.0 210.0 220.0
 
-#intensidad/muy_bajo = 0.0 0.04 0.1 0.14
-#intensidad/bajo = 0.1 0.14 0.18 0.22
-#intensidad/fuerte = 0.18 0.22 0.26 0.3
-#intensidad/muy_fuerte = 0.26 0.3 0.34 0.38
 
-intensidad/muy_bajo = 0.0 0.04 0.1 0.14
-intensidad/bajo = 0.1 0.14 0.18 0.22
-intensidad/fuerte = 0.18 0.22 0.26 0.3
-intensidad/muy_fuerte = 0.26 0.3 0.34 0.38
+intensidad/0_muy_bajo = 0.0 0.01 1.0 1.5
+intensidad/1_bajo = 1.0 1.5 3.0 3.5
+intensidad/2_fuerte = 3.0 3.5 6.0 6.5
+intensidad/3_muy_fuerte = 6.0 6.5 7.0 8.0
+
 
 # Las reglas indican en cada caso que conjunto de salida se debe accionar
 # cuando ese activo el conjunto de entrada que esté especificado en la clave
@@ -73,9 +71,10 @@ intensidad/muy_fuerte = 0.26 0.3 0.34 0.38
 [Reglas]
 
 intensidad/0 = 2 3
-intensidad/1 = 0 1
-#intensidad/2 = 0
-#voltaje/2 = 0
-voltaje/3 = 0 1
-voltaje/4 = 2 3
+intensidad/1 = 1 2
+intensidad/2 = 0 1
+voltaje/3 = 0 1 2
+voltaje/4 = 1 2 3
+voltaje/5 = 2 3
+
 
