Agregado arreglo para constructor de copia e inicializaci´on de la poblacion

--- a/GTP4/EJ1/parametros.cfg
+++ b/GTP4/EJ1/parametros.cfg
@@ -1,1 +1,9 @@
+# Ejercicio 1 Guia Trabajos Practicos 4
 
+############################
+# Poblacion
+cantidad_elementos = 100
+
+# Valor maximo de valores de la poblacion
+min = -512.0
+max = 512.0
