Agregado elementos para elitismo

--- a/GTP4/EJ1/parametros.cfg
+++ b/GTP4/EJ1/parametros.cfg
@@ -7,3 +7,11 @@ cantidad_elementos = 100
 # Valor maximo de valores de la poblacion
 min = -512.0
 max = 512.0
+
+
+# Metodo de seleccion de padres
+# 1 = ruleta
+# 2 = ?
+metodo_seleccion = 1
+
+elitismo = false
