Agregado metodo de seleccion de padres

--- a/GTP4/EJ1/parametros.cfg
+++ b/GTP4/EJ1/parametros.cfg
@@ -10,8 +10,9 @@ max = 512.0
 
 
 # Metodo de seleccion de padres
-# 1 = ruleta
-# 2 = ?
+# 1 = Ruleta
+# 2 = Ventana
+# 3 = Torneo
 metodo_seleccion = 1
 
 elitismo = false
