--- a/GTP4/EJ4/parametros.cfg
+++ b/GTP4/EJ4/parametros.cfg
@@ -6,7 +6,7 @@ cantidad_entradas = 2
 cantidad_salidas = 1
 archivo_entrada = clouds.csv
 #Arquitectura de capas
-capas = 2 3 1
+capas = 2 1
 tasa_aprendizaje = 0.05
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
@@ -17,7 +17,7 @@ codificacion_salida = 0 1
 
 # Tolerancia de error es en % ( 0 -> 100 )
 tolerancia_error = 2
-#Cantidad de particulas
+#Cantidad de particulas (cantidad de pesos) NO OLVIDAR EL BIAS
 cant_part = 9
 #Xmax
 xmax = 100.0
