Agregados metodos de seleccion de padres

--- a/GTP4/EJ1/parametros.cfg
+++ b/GTP4/EJ1/parametros.cfg
@@ -8,14 +8,17 @@ cantidad_elementos = 100
 min = -512.0
 max = 512.0
 
+# Brecha generacional
+brecha_generacional = 20
+
+# Elitismo
+elitismo = false
 
 # Metodo de seleccion de padres
 # 1 = Ruleta
 # 2 = Ventana
 # 3 = Torneo
 metodo_seleccion = 1
-
-elitismo = false
 
 
 # Fitness
