Agregados parametros desde la configuracion

--- a/GTP4/EJ1/parametros.cfg
+++ b/GTP4/EJ1/parametros.cfg
@@ -20,6 +20,8 @@ elitismo = false
 # 3 = Torneo
 metodo_seleccion = 1
 
+# Probabilidad de mutacion ( 0 -> 100 )
+probabilidad_mutacion = 20
 
 # Fitness
 fitnes_necesario = 0.1
