Lo de ayer y algo del ej4

--- a/GTP4/EJ1/parametros.cfg
+++ b/GTP4/EJ1/parametros.cfg
@@ -2,14 +2,14 @@
 
 ############################
 # Poblacion
-cantidad_elementos = 100
+cantidad_elementos = 10
 
 # Valor maximo de valores de la poblacion
 min = -512.0
 max = 512.0
 
 # Brecha generacional
-brecha_generacional = 20
+brecha_generacional = 0.3
 
 # Elitismo
 elitismo = false
@@ -18,10 +18,13 @@ elitismo = false
 # 1 = Ruleta
 # 2 = Ventana
 # 3 = Torneo
-metodo_seleccion = 1
+metodo_seleccion = 3
 
 # Probabilidad de mutacion ( 0 -> 100 )
-probabilidad_mutacion = 20
+probabilidad_mutacion = 2
 
 # Fitness
-fitnes_necesario = 0.1
+fitnes_necesario = 1000
+
+#Iteraciones maximas
+iteracciones_maximas = 1000
