--- a/GTP4/EJ4/parametros.cfg
+++ b/GTP4/EJ4/parametros.cfg
@@ -17,10 +17,12 @@ codificacion_salida = 0 1
 
 # Tolerancia de error es en % ( 0 -> 100 )
 tolerancia_error = 2
+# Cantidad de Iteraciones Maximas
+iter = 2000
 #Cantidad de particulas (cantidad de pesos) NO OLVIDAR EL BIAS
 cant_part = 9
-#Xmax
-xmax = 100.0
-#Xmin
-xmin = -100.0
+#Xmax (tendria que ser como se inician los pesos en la red)
+xmax = 0.5
+#Xmin (tendria que ser como se inician los pesos en la red)
+xmin = -0.5
 
