Terminado el ej4 (Faltaria buscar la mejor arquitectura) y representar correctamente en los graficos. En el ej 3 los graficos. Termino a la tarde

--- a/GTP1/Ej3/parametros.cfg
+++ b/GTP1/Ej3/parametros.cfg
@@ -1,9 +1,9 @@
 # Cantidad de datos de entradas a N neuronas
-cantidad_entradas = 4
+cantidad_entradas = 2
 cantidad_salidas = 1
-archivo_entrada = iris.csv
+archivo_entrada = clouds.csv
 
-capas = 3 3
+capas = 2 2
 tasa_aprendizaje = 0.05
 momento = 0.0
 
@@ -21,4 +21,4 @@ tolerancia_error = 2
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
 #          se sacará el valor la posicion de la neurona ganadora como salida
-codificacion_salida = 0 1 2
+codificacion_salida = 0 1
