Mejorado metodo de torneo para que elija los padres ordenados seg´un fitness y agregado parametro de cantidad de padres a utilizar

--- a/GTP4/EJ1/parametros.cfg
+++ b/GTP4/EJ1/parametros.cfg
@@ -9,7 +9,12 @@ min = -512.0
 max = 512.0
 
 # Brecha generacional
+# Pasa elementos de la poblacion a la nueva poblacion
 brecha_generacional = 0.3
+
+# Cantidad de padres a utilizar
+# expresado en porcentaje de la cantidad de elementos
+cantidad_padres = 0.4
 
 # Elitismo
 elitismo = false
@@ -18,7 +23,7 @@ elitismo = false
 # 1 = Ruleta
 # 2 = Ventana
 # 3 = Torneo
-metodo_seleccion = 3
+metodo_seleccion = 2
 
 # Probabilidad de mutacion ( 0 -> 100 )
 probabilidad_mutacion = 2
