--- a/GTP4/EJ1b/parametros.cfg
+++ b/GTP4/EJ1b/parametros.cfg
@@ -1,27 +1,35 @@
-# Ejercicio 1 Guia Trabajos Practicos 4
+# Ejercicio 1 Guia Trabajos Practicos 4 Item b
 
 ############################
 # Poblacion
 cantidad_elementos = 100
 
 # Valor maximo de valores de la poblacion
-min = -512.0
-max = 512.0
+min = 0.0
+max = 20.0
 
 # Brecha generacional
-brecha_generacional = 20
+# Pasa elementos de la poblacion a la nueva poblacion
+brecha_generacional = 0.3
+
+# Cantidad de padres a utilizar
+# expresado en porcentaje de la cantidad de elementos
+cantidad_padres = 0.4
 
 # Elitismo
-elitismo = false
+elitismo = true
 
 # Metodo de seleccion de padres
 # 1 = Ruleta
 # 2 = Ventana
 # 3 = Torneo
-metodo_seleccion = 1
+metodo_seleccion = 2
 
 # Probabilidad de mutacion ( 0 -> 100 )
-probabilidad_mutacion = 20
+probabilidad_mutacion = 2
 
 # Fitness
-fitnes_necesario = 0.1
+fitnes_necesario = 1000
+
+#Iteraciones maximas
+iteracciones_maximas = 1000
