Mejoras al genoma XY

--- a/GTP4/EJ1c/parametros.cfg
+++ b/GTP4/EJ1c/parametros.cfg
@@ -4,6 +4,10 @@
 # Poblacion
 cantidad_elementos = 100
 
+# Cantidad de padres a utilizar
+# expresado en porcentaje de la cantidad de elementos
+cantidad_padres = 0.4
+
 # Valor maximo de valores de la poblacion
 min = -512.0
 max = 512.0
