--- a/GTP4/EJ2/parametros.cfg
+++ b/GTP4/EJ2/parametros.cfg
@@ -1,5 +1,4 @@
 # Ejercicio 1 Guia Trabajos Practicos 4
-
 ############################
 # Poblacion
 cantidad_elementos = 20
@@ -32,4 +31,15 @@ iteracciones_maximas = 1000
 
 ################################
 # Ciudades
-cant_ciudades = 20
+cantidad_ciudades = 10
+
+distancias0 = 0 10 20 30 40 50 60 70 80 90
+distancias1 = 10 0 10 20 30 40 50 60 70 80
+distancias2 = 20 10 0 10 20 30 40 50 60 70
+distancias3 = 30 20 10 0 10 20 30 40 50 60
+distancias4 = 40 30 20 10 0 10 20 30 40 50
+distancias5 = 50 40 30 20 10 0 10 20 30 40
+distancias6 = 60 50 40 30 20 10 0 10 20 30
+distancias7 = 70 60 50 40 30 20 10 0 10 20
+distancias8 = 80 70 60 50 40 30 20 10 0 10
+distancias9 = 90 80 70 60 50 40 30 20 10 0
