Cambios en el pso de hoy. Falta implementar la probabilidad de cruza.

--- a/GTP4/EJ4/parametros.cfg
+++ b/GTP4/EJ4/parametros.cfg
@@ -6,7 +6,7 @@ cantidad_entradas = 2
 cantidad_salidas = 1
 archivo_entrada = clouds.csv
 #Arquitectura de capas
-capas = 3 2
+capas = 4 4 2
 tasa_aprendizaje = 0.05
 # Codificacion de las salidas
 # Formato: cada posicion es el numero de neurona ganadora.
@@ -16,11 +16,11 @@ codificacion_salida = 0 1
 ### PARAMETROS PSO ###
 
 # Tolerancia de error es en % ( 0 -> 100 ) o cantidad de errores en la prueba
-tolerancia_error = 1100
+tolerancia_error = 1200
 # Cantidad de Iteraciones Maximas
-iter = 1000
+iter = 100
 #Cantidad de particulas (cantidad de pesos) NO OLVIDAR EL BIAS
-cant_part = 17
+cant_part = 50
 #Xmax (tendria que ser como se inician los pesos en la red)
 xmax = 0.5
 #Xmin (tendria que ser como se inician los pesos en la red)
