--- a/GTP2/Ej2/parametros.cfg
+++ b/GTP2/Ej2/parametros.cfg
@@ -12,14 +12,14 @@ som_tam_y = 10
 tasa_aprendizaje = 0.9 0.7 0.1 0.001
 
 # Radio de vecindad al inicio de las etapas
-radio_vecindad = 8
-limite_vecindad = 0.15
+radio_vecindad = 5
+#limite_vecindad = 0.0
 
 # Cantidad de epocas por cada etapa
 # Valor 0 = ordenamiento topologico
 # Valor 1 = etapa de transicion
 # Valor 2 = Ajuste fino
-epocas = 70 101 300
+epocas = 700 1000 3000
 
 
 # Archivo de entrada
