Arreglado el SOM

--- a/GTP2/Ej2/parametros.cfg
+++ b/GTP2/Ej2/parametros.cfg
@@ -2,8 +2,8 @@
 tamano_entradas = 2
 
 # SOM
-som_tam_x = 10
-som_tam_y = 10
+som_tam_x = 1
+som_tam_y = 100
 
 # Tasa de aprendizaje:
 #  Valor 0 = Tasa de inicio para ordenamiento topologico
@@ -12,7 +12,7 @@ som_tam_y = 10
 tasa_aprendizaje = 0.9 0.7 0.1 0.001
 
 # Radio de vecindad al inicio de las etapas
-radio_vecindad = 5
+radio_vecindad = 5 3 1 0
 #limite_vecindad = 0.0
 
 # Cantidad de epocas por cada etapa
