Agregada la modificaciones al som para hacer el ejercicio 4. No funciona los graficos con phoneme. Es muy mala la clasificacion aun usando muchas epocas.

--- a/GTP2/Ej3/parametros.cfg
+++ b/GTP2/Ej3/parametros.cfg
@@ -1,10 +1,10 @@
 # Dimension de los datos de entrada
-tamano_entradas = 5
+tamano_entradas = 2
 tamano_salidas = 1
 
 # SOM
-som_tam_x = 2
-som_tam_y = 2
+som_tam_x = 10
+som_tam_y = 10
 
 # Tasa de aprendizaje:
 #  Valor 0 = Tasa de inicio para ordenamiento topologico
@@ -13,18 +13,18 @@ som_tam_y = 2
 tasa_aprendizaje = 0.9 0.4 0.2 0.001
 
 # Radio de vecindad al inicio de las etapas
-radio_vecindad = 1
+radio_vecindad = 5 3 1 0
 
 # Cantidad de epocas por cada etapa
 # Valor 0 = ordenamiento topologico
 # Valor 1 = etapa de transicion
 # Valor 2 = Ajuste fino
-epocas = 1000 1000 3000
+epocas = 100 200 50
 
 # Codificacion de las salidas
 cant_clases = 2
 
 # Archivo de entrada
-#archivo_entrada = clouds.csv
-archivo_entrada = phoneme.csv
+archivo_entrada = clouds.csv
+#archivo_entrada = phoneme.csv
 
