Agregada la probabilidad de cruza (no estoy del todo seguro si hay que sacar los remove o no REVISAR). Implementada la funcion de cruza y de mutacion en el genomaventana.

--- a/GTPF/parametros.cfg
+++ b/GTPF/parametros.cfg
@@ -27,6 +27,7 @@ metodo_seleccion = 3
 
 # Probabilidad de mutacion ( 0 -> 100 )
 probabilidad_mutacion = 2
+probabilidad_cruza = 70
 
 # Fitness
 fitnes_necesario = 1000
