Parametros nuevos en la configuraciones

--- a/GTPF/parametros.cfg
+++ b/GTPF/parametros.cfg
@@ -1,12 +1,8 @@
-# Ejercicio 1 Guia Trabajos Practicos 4
+# TP Final
 
 ############################
 # Poblacion
 cantidad_elementos = 20
-
-# Valor maximo de valores de la poblacion
-min = -512.0
-max = 512.0
 
 # Brecha generacional
 # Pasa elementos de la poblacion a la nueva poblacion
@@ -34,3 +30,4 @@ fitnes_necesario = 1000
 
 #Iteraciones maximas
 iteracciones_maximas = 1000
+
