--- a/GTPF/parametrosVidrio.cfg
+++ b/GTPF/parametrosVidrio.cfg
@@ -1,4 +1,4 @@
-# Ejercicio 1 Guia Trabajos Practicos 4
+# TP Final
 
 ############################
 # Poblacion
@@ -30,3 +30,9 @@ fitnes_necesario = 1000
 
 #Iteraciones maximas
 iteracciones_maximas = 1000
+
+#Ancho de la plancha de vidrio de fabrica
+ancho_plancha = 10
+
+#Alto de la plancha de vidrio de fabrica
+alto_plancha = 10
