Carga de los c para la suma pesada

--- a/GTPF/parametrosAluminio.cfg
+++ b/GTPF/parametrosAluminio.cfg
@@ -37,3 +37,6 @@ iteracciones_maximas = 1000
 
 #Largo de la barra de aluminio de fabrica
 largo_barra = 10
+
+#Factor de Peso para la barra de aluminio
+c1 = 1.0
