--- a/GTPF/parametros.cfg
+++ b/GTPF/parametros.cfg
@@ -13,7 +13,7 @@ brecha_generacional = 0.3
 cantidad_padres = 0.4
 
 # Elitismo
-elitismo = false
+elitismo = true
 
 # Metodo de seleccion de padres
 # 1 = Ruleta
@@ -29,7 +29,7 @@ probabilidad_cruza = 90
 fitnes_necesario = 0
 
 #Iteraciones maximas
-iteracciones_maximas = 10
+iteracciones_maximas = 5
 
 
 
