--- a/GTPF/parametrosVidrio.cfg
+++ b/GTPF/parametrosVidrio.cfg
@@ -2,7 +2,7 @@
 
 ############################
 # Poblacion
-cantidad_elementos = 20
+cantidad_elementos = 10
 
 # Brecha generacional
 # Pasa elementos de la poblacion a la nueva poblacion
@@ -13,7 +13,7 @@ brecha_generacional = 0.3
 cantidad_padres = 0.4
 
 # Elitismo
-elitismo = false
+elitismo = true
 
 # Metodo de seleccion de padres
 # 1 = Ruleta
@@ -29,13 +29,13 @@ probabilidad_cruza = 70
 fitnes_necesario = 0
 
 #Iteraciones maximas
-iteracciones_maximas = 1
+iteracciones_maximas = 10
 
 #Ancho de la plancha de vidrio de fabrica
-ancho_plancha = 10
+ancho_plancha = 2.5
 
 #Alto de la plancha de vidrio de fabrica
-alto_plancha = 10
+alto_plancha = 3.6
 
 #Factor de Peso para el vidrio
-c2 = 1.0
+c2 = 1638.0
