--- a/GTPF/parametrosAluminio.cfg
+++ b/GTPF/parametrosAluminio.cfg
@@ -2,7 +2,7 @@
 
 ############################
 # Poblacion
-cantidad_elementos = 20
+cantidad_elementos = 10
 
 
 # Brecha generacional
@@ -14,7 +14,7 @@ brecha_generacional = 0.3
 cantidad_padres = 0.4
 
 # Elitismo
-elitismo = false
+elitismo = true
 
 # Metodo de seleccion de padres
 # 1 = Ruleta
@@ -30,10 +30,10 @@ probabilidad_cruza = 70
 fitnes_necesario = 0
 
 #Iteraciones maximas
-iteracciones_maximas = 1
+iteracciones_maximas = 10
 
 #Largo de la barra de aluminio de fabrica
 largo_barra = 10
 
 #Factor de Peso para la barra de aluminio
-c1 = 1.0
+c1 = 400.0
