Corregido el calculo total. Agregados los costos por metro cuadrado de vidrio y por metro de aluminio. Incorporado el medidor de tiempo para ver que tan efectivo es. Cambiadas las configuraciones para que corra muchas iteraciones.

--- a/GTPF/parametrosAluminio.cfg
+++ b/GTPF/parametrosAluminio.cfg
@@ -2,7 +2,7 @@
 
 ############################
 # Poblacion
-cantidad_elementos = 10
+cantidad_elementos = 100
 
 
 # Brecha generacional
@@ -30,10 +30,13 @@ probabilidad_cruza = 70
 fitnes_necesario = 0
 
 #Iteraciones maximas
-iteracciones_maximas = 10
+iteracciones_maximas = 100
 
 #Largo de la barra de aluminio de fabrica
 largo_barra = 10
+
+#Costo por metro de aluminio
+costo_aluminio = 40.0
 
 #Factor de Peso para la barra de aluminio
 c1 = 400.0
