--- a/GTPF/parametrosVidrio.cfg
+++ b/GTPF/parametrosVidrio.cfg
@@ -2,7 +2,7 @@
 
 ############################
 # Poblacion
-cantidad_elementos = 10
+cantidad_elementos = 100
 
 # Brecha generacional
 # Pasa elementos de la poblacion a la nueva poblacion
@@ -29,13 +29,16 @@ probabilidad_cruza = 70
 fitnes_necesario = 0
 
 #Iteraciones maximas
-iteracciones_maximas = 10
+iteracciones_maximas = 100
 
 #Ancho de la plancha de vidrio de fabrica
 ancho_plancha = 2.5
 
 #Alto de la plancha de vidrio de fabrica
 alto_plancha = 3.6
+
+#Costo del metro cuadrado de vidrio
+costo_vidrio = 182.0
 
 #Factor de Peso para el vidrio
 c2 = 1638.0
