Estaban mal configurados los c tambien ahora lo dejo corriendo en release nomas.

--- a/GTPF/parametros.cfg
+++ b/GTPF/parametros.cfg
@@ -13,7 +13,7 @@ brecha_generacional = 0.3
 cantidad_padres = 0.4
 
 # Elitismo
-elitismo = true
+elitismo = false
 
 # Metodo de seleccion de padres
 # 1 = Ruleta
